fix JSONToJava quiz