@@ -10,18 +10,21 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.nio.file.Path;
 
 public class JSONtoJava {
 
-    public static void main(String[] args){
+    public static void main(String[] args) throws MalformedURLException {
 
-            ObjectMapper objectMapper = new ObjectMapper();
-
-            try {
-                Quiz quiz = objectMapper.readValue(new URL("file: src/main/java/introjavaws21/quiz-example.json"), Quiz.class);
-                System.out.println(quiz);
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
+        ObjectMapper objectMapper = new ObjectMapper();
+        Path path = Path.of("src/main/java/introjavaws21/quiz-example.json");
+        // Path path = Path.of("src/main/java/introjavaws21/test.json");
+        
+        try {
+            Quiz quiz = objectMapper.readValue(path.toUri().toURL(), Quiz.class);
+            System.out.println(quiz);
+        } catch (IOException e) {
+            e.printStackTrace();
         }
+    }
 }
